# cppNote

android/cmakeDemo/: settings.gradle
android/cmakeDemo/app/: build.gradle
android/cmakeDemo/rtspc/: build.gradle
bin32/: eXosip.lib  osip.lib  osipparser.lib
doc/: C++smartPoint.docx  accelerate.md
doc/ciper_ppt/: bio.pem  ciper.xmind  encryption.pptx  x509.cer
doc/oneNote/cpp/: 库.one  打开笔记本.onetoc2  新分区 1.one
doc/oneNote/工作/: 常用命令.one  打开笔记本.onetoc2
doc/oneNote/系分/: 打开笔记本.onetoc2  新分区 1.one  计算机体系结构.one
doc/oneNote/经验案例/: Android NDK crash 问题定位.one  C++ 智能指针.one  安卓音量曲线源码分析.one  打开笔记本.onetoc2  瑞芯微平台安卓音频驱动开发.one  链接不到so库.one
doc/sip/: invite.cap  sip.xmind  注册.pcapng
project/: cppNote.sln
project/cppNote/: ReadMe.txt  Resource.h  cppNote.cpp  cppNote.h  cppNote.rc  cppNote.vcxproj  cppNote.vcxproj.filters  cppNoteDlg.cpp  cppNoteDlg.h  stdafx.cpp
project/cppNote/res/: cppNote.rc2
project/cppPrimer/: cppPrimer.cpp  cppPrimer.vcxproj  cppPrimer.vcxproj.filters
project/leetcode/: leetcode.cpp  leetcode.vcxproj
project/rtsp/: rtsp.cpp  rtsp.vcxproj  rtsp.vcxproj.filters
project/sipClient/: ReadMe.txt  resource.h  sipClient.cpp  sipClient.h  sipClient.rc  sipClient.vcxproj  sipClient.vcxproj.filters  sipClientDlg.cpp  sipClientDlg.h  stdafx.cpp  stdafx.h
project/sipClient/res/: sipClient.rc2
project/sipServerImC/: sipServerImC.cpp  sipServerImC.vcxproj  sipServerImC.vcxproj.filters
project/sipSvrHicore/: sipSvrHicore.vcxproj  sipSvrHicore.vcxproj.filters
redundance/cmakeCompile/: CMakeLists.txt  README.md  main.cpp
redundance/cmakeCompile/src/alg/graph/: ListGraph.h
redundance/cmakeCompile/src/app/sip/: sipTest.cpp  sipTest.h
redundance/cmakeCompile/src/app/sip/SipServer/: RequestsHandler.cpp  SipClient.cpp  SipClient.hpp  SipServer.cpp  SipServer.h  UdpServer.cpp
redundance/cmakeCompile/src/cppPrimer/generics/: Generics.h
redundance/cmakeCompile/src/cppPrimer/lambda/: lambda.h
redundance/sipSvrDemo/: Demo.sln
redundance/sipSvrDemo/Demo/: Demo.cpp  Demo.vcproj  Makefile  addr_book_mgr.cpp  addr_book_mgr.h  application.cpp  (+58 more)
src/cppPrimer/: lambda.h
src/osip/: ict.c
src/rtsp/: CNet_PortPool.cpp  CNet_PortPool.h  CRtspListener.cpp  CRtspListener.h  CRtspServer.cpp  CRtspServer.h  CRtspSessionManager.cpp  CRtspSessionManager.h  RtspCom.h  RtspSvrApi.cpp  RtspSvrApi.h  rtsp_h264_file.cpp  rtsp_server.cpp
src/sipServer/: RequestsHandler.cpp  SipMessage.cpp  SipMessage.hpp  SipMessageFactory.cpp  SipServer.cpp
src/sipSvrHicore/: sipDevSDK_base_function.h  sipDevSDK_base_function_def.h  sipsvr_api.cpp
thridparty/toolUnits/: CMakeLists.txt
zl/zlmedia/: CMakeLists.txt
zl/zlmedia/3rdpart/: CMakeLists.txt
zl/zlmedia/3rdpart/zltoolkit/: CMakeLists.txt
zl/zlmedia/3rdpart/zltoolkit/src/Util/: logger.cpp
zl/zlmedia/server/: CMakeLists.txt  main.cpp
zltoolkit/: .gitignore  CMakeLists.txt  build_for_android.sh  build_for_linux.sh
zltoolkit/tests/: test_logger.cpp
(+96 files in other folders)
